lucia-macros/tests/ui/error_enum/no_enum_struct_or_type.stderr
error: Invalid item. Expected enum, struct or type.
 --> tests/ui/error_enum/no_enum_struct_or_type.rs:6:10
  |
6 |   #[pkg::req_data]
  |          ^^^^^^^^

error: Invalid item. Expected enum, struct or type.
  --> tests/ui/error_enum/no_enum_struct_or_type.rs:18:10
   |
18 |   #[pkg::res_data]
   |          ^^^^^^^^

error: Invalid item. Expected enum, struct or type.
  --> tests/ui/error_enum/no_enum_struct_or_type.rs:24:10
   |
24 |   #[pkg::params]
   |          ^^^^^^
